--- a/template.tex
+++ b/template.tex
@@ -133,7 +133,7 @@ CT guidance is often used in interventional radiology procedures to help the sur
 Dose reduction in interventional CT is important both for patients and for the medical staff, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure has been linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods to prevent excessive dose exposure to the radiologist's hands \cite{stoeckelhuber2005radiation}.
 
 Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT \textcolor{red}{with or without optical or electromagnetic tracking.}
-Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. \textcolor{red}{Moreover, it requires direct contact between the US probe and the patient body, and cannot ne used when imaging needle near or inside the lungs due to air.}
+Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. \textcolor{red}{Moreover, it requires direct contact between the US probe and the patient body, and cannot be used when imaging needle near or inside the lungs due to air.}
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
 Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with $\times$2-3 radiation dose reduction \cite{dynact}.
 \textcolor{red}{Interventional CT procedures are very common, as they offer ease of use, superior image quality and 3D imaging \cite{gupta2014ct}.}
@@ -287,7 +287,7 @@ The full baseline scan was registered to each sparse scan with the flexible need
 
 The spherical marker center ground truth coordinates was obtained by manual localization on the reconstructed images. The flexible needle trajectory ground truth was traced in 3D image space by manually placing landmark points on a volumetric difference image and then fitting them to a 3D cubic B\'ezier curve. The flexible needle tip ground truth location was defined as the point on the needle trace found at the known tip-marker distance. The flexible needle trajectory error was evaluated as the root-mean-squared distance of points along the fitted curve to the nearest point on the ground-truth B\'ezier curve.
 
-Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). In our method, long needle segments that are in-plane lead to inaccurate estimation of the trajectory since the projections of such segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane, \textcolor{red}{which means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case} \cite{medan2017reduced}. Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
+Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). \textcolor{red}{In our method, long needle segments that are in-plane lead to inaccurate estimation of the trajectory since the projections of these segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane. This means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case \cite{medan2017reduced}.} Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
 
 The running time of our implementation is 200-250 seconds on an Intel i7 CPU running un-optimized Matlab code. To allow our method to be used in a clinical setting, the code should be optimized and parallelized for GPU computations so as to reduce the running time to 2-5 seconds. The parallelization is achieved in the projection difference computation step by computing the projection difference images in parallel and in the subsequent landmark point additions.  
 
@@ -302,7 +302,9 @@ The running time of our implementation is 200-250 seconds on an Intel i7 CPU run
 
 The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which precludes the reconstruction of the scanned image. The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free of imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
 
-Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention. The potential ten-fold reduction in radiation dose is much more substantial than that of existing methods, i.e. about $times$2-3 of a full scan. 
+\textcolor{red}{Fractional scanning is an alternative and complementary radiation dose reduction technique to low-dose scanning. The fractional scanning technique uses only a small number of scan angles, e.g., 10-18. By using fewer scan angles, a lower radiation dose is imposed on the patient. The dose reduction is calculated as the percentage of scan angles acquired out of the full 180 angles.}
+
+\textcolor{red}{Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention and sterilizing it by autoclaving together with the other instruments required for the procedure.}
 
 {\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. 
 \textcolor{red}{Anatomical deformations could potentially be addressed in future work by extending the registration stage into a deformable registration algorithm between the repeat and baseline scans, relying on a low-dimensional parameter space to describe a global deformation field.}
@@ -310,7 +312,7 @@ The scan field of view should include both the flexible needle and the spherical
 
 {\em Study limitations:} the scope of our study is limited to several scans of an abdomen phantom. Fractional scanning is simulated from full scan data by omitting most of the repeat scan data used as input for the algorithm. To implement our method on a commercial CT scanner, fractional scanning can be achieved by fast modulation of the X-ray tube current and/or voltage, or by fast mechanical X-ray  collimation during scan acquisition. Fractional scanning can be realized by software (scanner controller), while collimation requires hardware development. Both are beyond the scope of this work.
  
-\textcolor{red}{Anatomical deformations in the on-line fractional CT scanning framework are addressed in ongoing work with our new fractional scanning 3D Radon space deformable registration method [28]. The method computes a deformation field by minimizing a general low-order parametric model in Radon space.  To increase the convergence range and efficiency of the optimization, our method relies on a Radon space version of the well-known image processing hierarchical pyramid approach.}
+\textcolor{red}{Anatomical deformations in the on-line fractional CT scanning framework are addressed in ongoing work with our new fractional scanning 3D Radon space deformable registration method \cite{adelmanmsc2018}. The method computes a deformation field by minimizing a general low-order parametric model in Radon space.  To increase the convergence range and efficiency of the optimization, our method relies on a Radon space version of the well-known image processing hierarchical pyramid approach.}
  
 \section*{Conclusions}
 We have presented a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
