--- a/template.tex
+++ b/template.tex
@@ -112,7 +112,7 @@ grestore
 We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
 Our method accurately localizes the trajectory of a flexible needle to which a spherical marker is attached at a known distance from the tip with respect to a baseline scan of patient in the CT scanner coordinate frame. 
 The localization is achieved with a significantly lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
-Our method starts by performing rigid registration between the patient and the baseline scan in 3D Radon space computed from the sparse projection data.  It then computes 2D projection difference images in which the flexible needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from the projection images to accurately trace the flexible needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using two types of flexible needles. Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean tip localization error of 2.4 $\pm$ 0.9 mm with a $times$7.5 radiation dose reduction with respect to a full CT scan. The significant radiation dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
+Our method starts by performing rigid registration between the patient and the baseline scan in 3D Radon space computed from the sparse projection data.  It then computes 2D projection difference images in which the flexible needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from the projection images to accurately trace the flexible needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using a short and a long flexible needle. Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean tip localization error of 2.4 $\pm$ 0.9 mm with a $\times$7.5 radiation dose reduction with respect to a full CT scan. The significant radiation dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
 \keywords{
 interventional CT \and 
 fractional CT scanning \and 
@@ -136,21 +136,21 @@ Other imaging modalities used for interventional procedures include ultrasound, 
 Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. \textcolor{red}{Moreover, it requires direct contact between the US probe and the patient body, and cannot be used when imaging needle near or inside the lungs due to air.}
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
 Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with $\times$2-3 radiation dose reduction \cite{dynact}.
-\textcolor{red}{Interventional CT procedures are very common, as they offer ease of use, superior image quality and 3D imaging \cite{gupta2014ct}.}
+\textcolor{red}{Interventional CT procedures are very common, as they offer ease of use, superior image quality, axial slices views, and 3D imaging \cite{gupta2014ct}.}
 
 Dose reduction techniques for CT aim to achieve good image quality for a single, standalone scan acquisition. The most common radiation dose reduction technique is tube current modulation, in which the scan is acquired with a lower tube current. However, this technique decreases the scanning signal to noise ratio, which results in noise, lowered imaging contrast and resolution, and introduces imaging artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 that of a full CT scan. 
 
-We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, this technique is of limited use, as it only tracks the needle tip and assumes that the needle is rigid. It does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The advantages of our CT-based solutions over the existing procedure and over other modalities are: 1) no need of external tracking with its associated equipment and markers; 2) minimal modification of the current interventional CT workflow; 3) a simple and inexpensive sphere added to the needle; 4) no need for in-plane needle imaging.}
+We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, it is of limited use, as it only tracks the needle tip and assumes that the needle is rigid and does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The main novelty of this work as compared to our previous one \cite{medan2017reduced} is the extension of the method to allow localization of a flexible needle, which is a common during interventional chest and abdominal interventional CT procedures. The advantages of our CT-based solutions over the existing procedure and over other modalities are: 1) no need of external tracking with its associated equipment and markers; 2) minimal modification of the current interventional CT workflow; 3) a simple and inexpensive sphere added to the needle; 4) no need for in-plane needle imaging.}
 
 \section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion with robotic actuators. The proposed methods focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
-Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
-Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism consists of a driver unit that advances the needle and a positioning unit that steers the needle during the insertion. A pre-planned 3D trajectory is executed and corrected during the insertion based on full-dose repeat CT scans.
+Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned needle trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
+Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism consists of a driver unit that advances the needle and a positioning unit that steers the needle during the insertion. A pre-planned 3D needle trajectory is executed and corrected during the insertion based on full-dose repeat CT scans.
 Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model. The steering feedback is based on 2D in-plane imaging of the needle.
 
-Most works in needle localization from medical images use ultrasound as the imaging modality for localization. Vrooijink et al. \cite{vrooijink2013real} describe a robotics system that positions a 2D ultrasound transducer perpendicular to the needle tip. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining ultrasound and X-ray imaging is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluoroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be localized and tracked.
+Most works in needle localization and tracking based on medical images use ultrasound as the imaging modality for localization. Vrooijink et al. \cite{vrooijink2013real} describe a robotics system that positions a 2D ultrasound transducer perpendicular to the needle tip. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining ultrasound and X-ray imaging is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluoroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be localized and tracked.
 
-Several works describe specific methods to localize the needle trajectory in reconstructed CT images. The authors have developed in previous work a method to localize the tip of a straight rigid needle \cite{medan2017reduced}. The needle tip  is computed from 2D projection images in sinogram space. 
+Several works describe specific methods to localize the needle trajectory in reconstructed CT images. The authors of this paper have developed in previous work a method to localize the tip of a straight rigid needle \cite{medan2017reduced} as discussed above. The needle tip  is computed from 2D projection images in sinogram space. 
 Hou et al. \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing 3D points at which the needle intersects slice planes and fitting a fourth-order polynomial to the resulting points set.
 Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance. In-situ manual identification by the operator of the needle tip in a full-dose CT scan is required. Note that these methods rely on the acquisition of a full repeat CT scan and on the reconstruction of the image for each localization of the needle, with the ensuing radiation dose cost to the patient and the staff.
 
@@ -160,13 +160,13 @@ In a different clinical application, Cong et al.  \cite{cong2015quantitative} sh
 
 We describe next a new method for flexible needle and patient localization in interventional CT procedures with fractional CT scanning. Our method starts by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between the baseline CT scan without the needle, and a repeat scan with the needle while it is inserted. The repeat scan is performed by sparsely sampling the view angle domain (fractional scanning) and without reconstructing the CT image. The baseline scan is a full scan, sampled densely in the view angle domain. We use projection difference images computed by subtracting registered re-projected baseline scan images from the sparse set of repeat projection images. These images highlight the differences between the scans, e.g., the needle. The flexible needle trajectory is then traced in 3D space using the projection difference images. The main steps of our method are:
 \begin{enumerate}
-\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place, \textcolor{red}{A fractional repeat scan is acquired with the needle in place, meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan.}. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
-\item \textit{Projection difference}.\textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed for the view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels creating a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
+\item \textit{Fractional scanning}.  \textcolor{red}{A fractional repeat scan is acquired with the needle in place, meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan.} The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
+\item \textit{Projection difference}. \textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed for the view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels that yield a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
 \item \textit{Spherical marker localization}. The 3D localization of the spherical marker attached to the flexible needle at a known distance from the tip is computed using the resulting projection difference images.\\[0.1ex]
 \item \textit{Incremental flexible needle trajectory tracing}. The flexible needle trajectory is incrementally computed in 3D space using the projection difference images, starting from the center of the spherical marker obtained in the previous step. \\[0.05ex]
 \item \textit{Display/feedback}. The current location of the flexible needle with respect to the baseline scan 3D image is displayed and/or used as feedback for gradually driving the needle towards the target.
 \end{enumerate}
-Steps 1-5 are repeated each time the flexible needle is gradually inserted during the intervention, until the needle tip localization indicates that the desired target structure in the patient's anatomy has been reached. Optionally, full CT scans for image reconstruction can be acquired as needed during the procedure for verification. Our method uses the same sparse projection sampling pattern both for the patient registration and for the flexible needle localization, thereby avoiding additional scanning and obviating the need for image reconstruction. Consequently, the radiation dose is a fraction of that required in other image-based methods. This allows frequent needle insertion and localization for feedback and accuracy without excessive radiation dose.
+Steps 1-5 are repeated each time the flexible needle is gradually inserted during the intervention, until the needle tip localization indicates that the desired target structure in the patient's anatomy has been reached. Optionally, full CT scans for image reconstruction can be acquired as needed during the procedure for verification purposes. Our method uses the same sparse projection sampling pattern both for the patient registration and for the flexible needle localization, thereby avoiding additional scanning and obviating the need for image reconstruction. Consequently, the radiation dose is a fraction of that required in other image-based methods. This allows frequent needle insertion and localization for feedback and accuracy without excessive radiation dose.
 
 We describe next a new method for localizing the spherical marker in 3D space and a new method for incremental tracing of the 3D flexible needle curve.
 
@@ -241,7 +241,7 @@ The incremental computation stops once the length of the 3D curve $C_{i+1}$ exce
 
 \section*{Experimental results}
 
-To demonstrate our method, we designed and conducted the following experiment. We used an abdomen phantom (CIRS model 57 Triple Modality 3D Abdominal Phantom) and inserted into it two flexible needles: a long 16 gauge needle (1.65mm outer diameter) and a short 22 gauge needle (0.72mm outer diameter). We attached a spherical marker to each needle at a predetermined distance from the tip: for the long needle, the marker center was fixed at 235mm from the tip; for the short needle, the distance was set 135mm (Figs.  \ref{long_needle_fig}, \ref{short_needle_fig} respectively).
+To demonstrate our method, we designed and conducted the following experiment. We used an abdomen phantom (CIRS model 57 Triple Modality 3D Abdominal Phantom) and inserted into it two flexible needles: a long 16 gauge needle (1.65mm outer diameter) and a short 22 gauge needle (0.72mm outer diameter). We attached a spherical marker to each needle at a predetermined distance from the tip: for the long needle, the marker center was set at 235mm from the tip; for the short needle, the distance was set at 135mm (Figs.  \ref{long_needle_fig}, \ref{short_needle_fig} respectively).
 
 We scanned the phantom on a GE Discovery CT750HD scanner at GE Healthcare Haifa, Israel (Fig. \ref{long_needle_fig}) and obtained sinogram and image data. The reconstructed image size is 800 $\times$ 800 $\times$ 144 voxels, with spatial resolution of 0.58 $\times$ 0.58 $\times$ 1.25 mm$^3$. The detector array consists of 885 elements scanned at 984 views at regular intervals in the range [0$^{\circ}$, 360$^{\circ}$), where four slices were acquired in each full revolution. The projection data was re-binned from fan-beam to parallel rays geometry.
 
@@ -287,7 +287,7 @@ The full baseline scan was registered to each sparse scan with the flexible need
 
 The spherical marker center ground truth coordinates was obtained by manual localization on the reconstructed images. The flexible needle trajectory ground truth was traced in 3D image space by manually placing landmark points on a volumetric difference image and then fitting them to a 3D cubic B\'ezier curve. The flexible needle tip ground truth location was defined as the point on the needle trace found at the known tip-marker distance. The flexible needle trajectory error was evaluated as the root-mean-squared distance of points along the fitted curve to the nearest point on the ground-truth B\'ezier curve.
 
-Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). \textcolor{red}{In our method, long needle segments that are in-plane lead to inaccurate estimation of the trajectory since the projections of these segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane. This means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case \cite{medan2017reduced}.} Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
+Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). \textcolor{red}{In our method, long needle segments that are in-plane lead to the inaccurate estimation of the trajectory since the projections of these segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane. This means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case \cite{medan2017reduced}.} Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
 
 The running time of our implementation is 200-250 seconds on an Intel i7 CPU running un-optimized Matlab code. To allow our method to be used in a clinical setting, the code should be optimized and parallelized for GPU computations so as to reduce the running time to 2-5 seconds. The parallelization is achieved in the projection difference computation step by computing the projection difference images in parallel and in the subsequent landmark point additions.  
 
@@ -300,11 +300,11 @@ The running time of our implementation is 200-250 seconds on an Intel i7 CPU run
 \label{multislices_fig}
 \end{figure*}
 
-The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which precludes the reconstruction of the scanned image. The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free of imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
+The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which obviates the need for the reconstruction of the scanned image. The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free from imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
 
-\textcolor{red}{Fractional scanning is an alternative and complementary radiation dose reduction technique to low-dose scanning. The fractional scanning technique uses only a small number of scan angles, e.g., 10-18. By using fewer scan angles, a lower radiation dose is imposed on the patient. The dose reduction is calculated as the percentage of scan angles acquired out of the full 180 angles.}
+\textcolor{red}{Fractional scanning is an alternative and complementary radiation dose reduction technique to low-dose scanning. The fractional scanning technique uses only a small number of scan angles, e.g., 12-24. By using fewer scan angles, a lower radiation dose is imposed on the patient. The dose reduction is calculated as the percentage of scan angles acquired out of the full 180 angles.}
 
-\textcolor{red}{Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention and sterilizing it by autoclaving together with the other instruments required for the procedure.}
+\textcolor{red}{Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching the spherical marker to the flexible needle by the medical staff before the intervention and sterilizing it by autoclaving together with the other instruments required for the procedure.}
 
 {\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. 
 \textcolor{red}{Anatomical deformations could potentially be addressed in future work by extending the registration stage into a deformable registration algorithm between the repeat and baseline scans, relying on a low-dimensional parameter space to describe a global deformation field.}
